# embedded-rust-monoproject

./: Cargo.toml  gdb_bootstrap.sh  memory.x  openocd.gdb
.cargo/: config.toml
src/apps/actw/: Cargo.toml
src/apps/actw/src/: main.rs
src/lib/bsps/actw_bsp/: Cargo.toml
src/lib/bsps/actw_bsp/src/: clock.rs  lib.rs  prelude.rs
src/lib/virtual_devices/: Cargo.toml
src/lib/virtual_devices/src/: clock.rs  lib.rs
