[package]
name = "actw_bsp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-hal = "0.2"
cortex-m = "0.7"
cortex-m-rt = "0.7.1"
switch-hal = "0.4.0"
panic-halt = "0.2.0"
cortex-m-semihosting = "0.3.7"
virtual_devices = { path = "../../virtual_devices" }
rtcc = "0.2.1"

# For the stm32f446 mcu
[dependencies.stm32f4xx-hal]
features = ["stm32f446"]
version = "0.10.0"

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations